tests/fixtures/invalid/bytes_lshift_dict.py
# Cannot left shift Bytes and Dict[str, int]
x: bytes = b"hello" << {"a": 1}
